--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
             android:name=".CustomApp"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/launcher_icon"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
@@ -38,7 +38,6 @@
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -50,9 +49,11 @@
         </activity>
         <activity android:name=".Customer.AddLicence">
         </activity>
-        <activity android:name=".Customer.LicenceList">
+        <activity android:name=".Customer.LicenceList"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".Customer.VehicleList">
+        <activity android:name=".Customer.VehicleList"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".Customer.AddVehicle">
         </activity>
